.kubernetes/beepsort-service.yml
apiVersion: v1
kind: Service
metadata:
  name: beepsort-service
  namespace: beepsort
spec:
  selector:
    app: beepsort
  type: LoadBalancer
  ports:
    - name: docker-port
      protocol: TCP
      port: 99
      targetPort: 80
